# BGFX_PROTOTYPE

./: BGFX_PROTOTYPE.cpp  BGFX_PROTOTYPE.h  CMakeLists.txt  CopyFile.cmake  InputManager.cpp  InputManager.h  ObjLoader.cpp  README.md  Utility.h  commandlinestuff.txt  commandlinestuff.txt.bak  fragment_shader1.glsl  fragment_shader1.sc  fragment_shader2.glsl  hatch4.mtl  monkey.mtl  simplevert.sc  testhatch.mtl  vertex_shader1.glsl  vertex_shader1.sc
different source/: BGFX_PROTOTYPE orig.cpp  BGFX_PROTOTYPE other.cpp  shadowmaps_simple_original.cpp
shaders/finaltests/: crosshatching_frag_variant2.sc  crosshatching_frag_variant3.sc
shaders/hatchtest1/: fragmenthatch.sc
shaders/hatchtest2/: crosshatch_vert.sc.bak
shaders/test20/: hatchfrag20.sc  hatchfrag20.sc.bak
shadertest/: fragment_shader1.glsl  fs_lighting.sc  varying.def.sc  vertex_shader1.glsl  vertex_shader2.glsl  vs_lighting.sc
shadertest/hatchtest1/: varying.def.sc  vertexhatch.sc
shadertest/hatchtest2/: crosshatch_frag.sc  crosshatch_frag.sc.bak  crosshatch_vert.sc  varying.def.sc
shadertest/test20/: hatchfrag20.sc
shadertest/test21/: hatchfrag21.sc.bak
shadertest/thisisit/: fs_cel.sc  vs_cel.sc
